[metadata]
name = subseasonal_toolkit
version = 0.0.1
description = Models for subseasonal forecasting of temperature and precipitation 2-6 weeks in advance.

[options]
packages = find_namespace:
install_requires =
    numpy
    pandas
    scikit-learn
    jupyter
    filelock
    catboost
    pyarrow
    ttictoc
    subseasonal-data
    poold
    torch
    nbeats-pytorch
    pytorch-lightning

[options.packages.find]
include =
    generate_predictions
    batch_metrics
