[metadata]
name = subseasonal_toolkit
version = 0.1.1
description = Models for subseasonal forecasting of temperature and precipitation 2-6 weeks in advance.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/subseasonal_toolkit
license_file = LICENSE

[options]
packages =
    subseasonal_toolkit
install_requires =
    numpy
    pandas
    scikit-learn
    jupyter
    filelock
    catboost
    pyarrow
    ttictoc
    subseasonal-data
    poold
    torch
    nbeats-pytorch
    pytorch-lightning
    tables
